api-service/kubernetes/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: api-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: api-service
